# newlanding

./: README.md
service/: .golangci.yml  Cargo.toml  docker-compose.yml  go.mod  go.sum  taskctl.yaml
service/cmd/newlanding/: config.go  main.go
service/internal/asserthttp/: assert.go
service/internal/authorization/: authorizer.go  component.go  securityContext.go
service/internal/authorization/auth0/: accessToken.go  accessToken_test.go  keys.go  keys_test.go  model_test.go  utils_test.go
service/internal/home/: component.go
service/internal/home/http/: index.go  model.go  routes.go
service/internal/home/rest/: index.go  routes.go
service/internal/response/: response.go  response_test.go
service/internal/response/.snapshots/: TestContentTypePayload  TestEmptyResponse  TestStatusCodeResponse
service/internal/response/hal/: document.go  hal.go  hal_test.go  link.go
service/internal/response/hal/.snapshots/: TestEmptyDocument  TestRenderMixedLinks  TestRenderNamedLinks  TestRenderRepeaedLinks  TestRenderSingleLink  TestRenderWithData  TestRepeatedLinks  TestSingleAndRepeatedLinks  TestSingleLink  TestTwoSingleLinks
service/internal/response/problem/: problem.go  types.go  types_test.go
service/internal/response/problem/.snapshots/: TestNotFound
service/internal/server/: authorizer.go  component.go  router.go  server.go  testing.go
service/internal/service/: authorization.go  config.go  home.go  server.go  service.go  testing.go
service/internal/users/: component.go  securityContext.go  userModel.go
service/internal/users/auth0/: accessToken.go  accessToken_test.go  keys.go  keys_test.go  model.go  model_test.go  utils_test.go
service/keys/: README.md  private_key.der  private_key.pem  public_key.jwk  public_key.pem
service/src/: authorization.rs  home.rs  http.rs  lib.rs  main.rs  model.rs  server.rs  service.rs  settings.rs  users.rs
service/src/authorization/: auth0.rs  component.rs  from_request.rs  model.rs
service/src/authorization/auth0/: domain.rs  keys.rs  parser.rs
service/src/home/: component.rs  http.rs  service.rs
service/src/home/http/: get.rs
service/src/http/: hal.rs
service/src/http/hal/: document.rs  links.rs  response.rs
service/src/http/problem/: types.rs
service/src/integration/: home.rs  service.rs
service/src/server/: component.rs  span.rs
service/src/service/: testing.rs
service/src/users/: auth0.rs  component.rs  http.rs  model.rs  repository.rs
service/src/users/auth0/: access_token.rs  domain.rs  get_user.rs
service/src/users/http/: get.rs  model.rs
service/src/users/model/: user_id.rs
service/src/users/repository/: access_token.rs
service/src/users/usecases/: get_user.rs
service/tests/home/: home_test.go
service/tests/home/.snapshots/: TestHomeSuite-TestHomeDocumentUnauthenticated
service/tests/suite/: testsuite.go
webapp/: .env  (+1 more)
(+10 files in other folders)
