[package]
name = "newlanding-service"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
opentelemetry = "0.12.0"
opentelemetry-jaeger = "0.11.0"
tracing = { version = "0.1.22", features = ["log-always"] }
tracing-futures = "0.2.4"
tracing-log = "0.1.1"
tracing-opentelemetry = "0.11.0"
tracing-subscriber = "0.2.15"
env_logger = "0.8.2"
dotenv = "0.15.0"
actix-cors = "0.5.4"
actix-http = "2.2.0"
actix-service = "1.0.6"
actix-web = "3.3.2"
futures = "0.3.12"
actix-web-prom = "0.5.1"
prometheus = "0.11.0"
serde = {version = "1.0.123", features = ["derive"] }
serde_json = { version = "1.0.61", features = ["preserve_order"] }
config = "0.10.1"
async-trait = "0.1.42"

[dev-dependencies]
assert2 = "0.3.4"
insta = "1.5.3"
